tests/ui/issues/issue-59494.stderr
error[E0308]: mismatched types
  --> $DIR/issue-59494.rs:20:40
   |
LL |     let t7 = |env| |a| |b| t7p(f, g)(((env, a), b));
   |                                        ^^^ cyclic type of infinite size

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
